<resources>
    <string name="app_name">WLClient</string>
    <string name="cancel">Cancel</string>
    <string name="start">start</string>
    <string name="color">color</string>
    <string name="detail">detail</string>
    <string name="pose">pose</string>
    <string name="current_girl">current girl</string>
    <string name="history">history</string>
    <string name="save_all">save all</string>
    <string name="back">back</string>
    <string name="forward">forward</string>
    <string name="created_at">Created at</string>
    <string name="copy">Copy</string>
    <string name="seeds">Seeds</string>
    <string name="randomize">Randomize</string>
    <string name="generate">Generate</string>
    <string name="view">View</string>
    <string name="send">Send</string>
    <string name="share">Share</string>
    <string name="random">random</string>
    <string name="noise">Noise</string>
    <string name="mark">Mark</string>
    <string name="naming">Naming</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="e_mail_empty">E-mail is empty.</string>
    <string name="name_empty">Name is empty.</string>
    <string name="e_mail_invalid">E-mail address is not valid.</string>
</resources>
