<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>
    <ImageView
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_marginTop="12dp"
        android:scaleType="fitCenter"
        android:id="@+id/ivImage"
        android:importantForAccessibility="no"
        />

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/generate"
            android:id="@+id/btnGenerate"
    />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true"
            android:padding="12dp"
            android:clipToPadding="false"
            android:scrollbarStyle="outsideOverlay"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
        >
            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/rgPose"
            >
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pose"
                />
                <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbPoseRandom"
                        android:text="@string/random"
                />
                <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbPoseMarked"
                />
            </RadioGroup>
            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    android:id="@+id/rgDetail"
            >
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/detail"
                />
                <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbDetailRandom"
                        android:text="@string/random"
                />
                <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbDetailMarked"
                />
            </RadioGroup>
            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    android:id="@+id/rgColor"
            >
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/color"
                />
                <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbColorRandom"
                        android:text="@string/random"
                />
                <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbColorMarked"
                />
            </RadioGroup>
            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    android:id="@+id/rgNoise"
            >
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/noise"
                />
                <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbNoiseRandom"
                        android:text="@string/random"
                />
                <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbNoiseMarked"
                />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000"
    />

    <Button
            style="?buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/colorCancel"
            android:id="@+id/btnCancel"

    />
</LinearLayout>