<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true"
            android:padding="12dp"
            android:clipToPadding="false"
            android:scrollbarStyle="outsideOverlay"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
        >
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:id="@+id/etSeeds"
                    android:layout_margin="12dp"
                    android:minLines="6"
            />
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:text="@string/randomize"
                    android:id="@+id/btnRandomize"
            />
            <Spinner

                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spStep"
            />
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:text="@string/generate"
                    android:id="@+id/btnGenerate"
            />
        </LinearLayout>
    </ScrollView>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000"
    />

    <Button
            style="?buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/colorCancel"
            android:id="@+id/btnCancel"

    />
</LinearLayout>